<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil"
            android:title="@string/perfil" />
        <!--<item
            android:id="@+id/nav_diario"
            android:icon="@drawable/ic_diario"
            android:title="Diário" />-->
        <item
            android:id="@+id/nav_calculadora"
            android:icon="@drawable/ic_calculator"
            android:title="@string/calculadora" />
        <item
            android:id="@+id/nav_refeicoes"
            android:icon="@drawable/ic_refeicoes"
            android:title="@string/refei_es" />

        <item
            android:id="@+id/nav_registos"
            android:icon="@drawable/ic_registos"
            android:title="@string/medi_es" />

        <item
            android:id="@+id/nav_lembretes"
            android:icon="@drawable/ic_lembretes"
            android:title="@string/lembretes" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/informa_es" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_config"
            android:title="@string/configura_es" />
    </group>
</menu>