<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.davidjulio.pfinal2020.activity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calculadora"
        android:name="com.davidjulio.pfinal2020.activity.ui.calculadora.CalculadoraFragment"
        android:label="@string/calc1"
        tools:layout="@layout/fragment_calculadora" />

    <fragment
        android:id="@+id/nav_config"
        android:name="com.davidjulio.pfinal2020.activity.ui.configuracoes.ConfiguracaoFragment"
        android:label="@string/sett1"
        tools:layout="@layout/fragment_configuracao" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.davidjulio.pfinal2020.activity.ui.perfil.PerfilFragment"
        android:label="@string/profile1"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_refeicoes"
        android:name="com.davidjulio.pfinal2020.activity.ui.refeicoes.RefeicoesFragment"
        android:label="@string/meals1"
        tools:layout="@layout/fragment_refeicoes" />

    <fragment
        android:id="@+id/nav_registos"
        android:name="com.davidjulio.pfinal2020.activity.ui.medicoes.MedicoesFragment"
        android:label="@string/measur1"
        tools:layout="@layout/fragment_medicoes" />

    <fragment
        android:id="@+id/nav_lembretes"
        android:name="com.davidjulio.pfinal2020.activity.ui.lembretes.LembretesFragment"
        android:label="@string/remeinder1"
        tools:layout="@layout/fragment_lembretes" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.davidjulio.pfinal2020.activity.ui.info.InfoFragment"
        android:label="@string/info1"
        tools:layout="@layout/fragment_info" />
</navigation>